# weather-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample.env
.github/workflows/: django-ci.yaml
apps/weather/: apps.py  helpers.py  tests.py  urls.py  views.py
apps/weather/templates/: index.html
config/nginx/: app.conf
locale/de/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
templates/: 400.html  403.html  404.html  500.html  base.html
weather_app/: asgi.py  settings.py  urls.py  wsgi.py
