[tool.poetry]
name = "weather-app"
version = "1.0.0"
description = "Simple weather web app using Python/Django"
authors = ["Mohammed Rishad <mohammedrishad.vk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
