[tool.poetry]
name = "weather-app"
version = "1.0.0"
description = "Simple weather web app using Python/Django"
authors = ["Mohammed Rishad <mohammedrishad.vk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.1.2"
requests = "^2.28.1"
aiohttp = "3.8.3"
gunicorn = "20.1.0"
uvicorn = "0.19.0"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
# Make sure this matches `*.py` in .editorconfig
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
